--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "generator-yeo",
 	"version": "1.0.23",
-	"description": "Static site generator based on Webpack!",
+	"description": "Static site generator for Amiculum Digital projects based on Webpack!",
 	"homepage": "https://github.com/slo-amiculum/generator-amiculum-yeo",
 	"author": "Stephen Orioste <stephen.orioste@amiculum.biz>",
 	"files": [
@@ -19,6 +19,7 @@
 		"sass",
 		"browsersync",
 		"webpack",
+		"webpack 5",
 		"amiculum-digital"
 	],
 	"devDependencies": {
