--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "generator-yeo",
-	"version": "1.0.25",
+	"version": "1.0.26",
 	"description": "Static site generator for Amiculum Digital projects based on Webpack!",
 	"homepage": "https://github.com/slo-amiculum/generator-amiculum-yeo",
 	"author": "Stephen Orioste <stephen.orioste@amiculum.biz>",
@@ -20,6 +20,7 @@
 		"browsersync",
 		"webpack",
 		"webpack 5",
+		"tailwindCSS",
 		"amiculum-digital"
 	],
 	"devDependencies": {
